refactor: change array.asList() for list.of() for the null field